// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Component should render with component as child 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  color: #012040;
  background-color: transparent;
  text-decoration: none;
}

.c0:active {
  color: #012040;
}

.c0:hover {
  color: #012040;
  text-decoration: underline;
  outline-width: 0;
  cursor: pointer;
}

<div>
  <a
    class="c0"
    href="#"
  >
    <span
      class="c1"
      textalign="initial"
      textcolor="inherit"
    >
      help me Mr Kite man
    </span>
  </a>
</div>
`;

exports[`Link Component should render with default props 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  color: #012040;
  background-color: transparent;
  text-decoration: none;
}

.c0:active {
  color: #012040;
}

.c0:hover {
  color: #012040;
  text-decoration: underline;
  outline-width: 0;
  cursor: pointer;
}

<div>
  <a
    class="c0"
    href="#"
  >
    <span
      class="c1"
      textalign="initial"
      textcolor="inherit"
    >
      Test
    </span>
  </a>
</div>
`;
